# tmpl

./: .gitignore  Cargo.toml  Makefile  README.md  error.go  go.mod  go.sum  helper.go  lexer.go  lexer_test.go  state.go  token.go  types.go
.cargo/: config
assert/: util.go
ast/: types.go
base/: cursor.go  cursor_test.go  lexer.go
benches/: closure_bench.rs
common/: cursor.go  cursor_test.go
docs/: TODO  architecture.md  design.md  function.md  grammar.bnf  grammar.ebnf  index.md  notes.md
function/: common.go  common_test.go  context.go  error.go  function.go  function_test.go  types.go
lexer/: array.go  assign.go  block.go  comment.go  cursor.go  cursor_test.go  decl.go  error.go  expr.go  function.go  helper.go  keyword.go  lexer.go  lexer_comment_test.go  lexer_expr_test.go  lexer_loop_test.go  lexer_test.go  logical.go  macro.go  matcher.go  matcher_test.go  primitive.go  sym.go  template.go  text.go  types.go
lexer/flow/: array.go  assign.go  blockexpr.go  comment.go  decl.go  error.go  expr.go  function.go  ident.go  index.go  logical.go  loop.go  map.go  primitive.go  (+5 more)
parser/: Cargo.toml  types.go
runes/: sym.go  util.go  util_test.go
runtime/: evaluator.go  types.go
src/: ast.rs  block.rs  bool.rs  error.rs  expr.rs  ident.rs  lib.rs  literal.rs  logical.rs  number.rs  operator.rs  simple_expr.rs  token.rs  types.rs  util.rs  value.rs
token/: constant.go  helper.go  helper_test.go  init.go  matcher.go  matcher_test.go  types.go
value/: Cargo.toml  array.go  map.go  types.go  value.go
value/src/: lib.rs  querable.rs  types.rs
(+29 files in other folders)
