[workspace]
members = ["value"]

# [package]
# name = "tmpl"
# version = "0.1.0"
# authors = ["zerosign <r1nlx0@gmail.com>"]
# edition = "2018"

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dev-dependencies]
# criterion = "0.3"
# lazy_static = "1.4.0"
# flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
# tar = "0.4"

# [[bench]]
# name = "closure_bench"
# harness = false

# [dependencies]
# combine = "4.0.0-beta.1"
# log = "0.4.8"
# env_logger = "0.7.0"
