[package]
name = "tmpl-value"
version = "0.0.1"
authors = ["zerosign <r1nlx0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
querable = { version = "^0.0.2", optional = true }

[features]
default = []
full = ["queryable"]
queryable = []